k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ola-mundo-deploy
  namespace: desafio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ola-mundo
  template:
    metadata:
      labels:
        app: ola-mundo
    spec:
      containers:
      - name: ola-mundo
        image: ola-mundo:1.0
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
